force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Percent_Total_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>Percent_Total_Spend_Variance__c</fullName>
    <formula>(  Baseline__r.Baseline_Total_Spend__c  -  Total_Spend__c  ) / Baseline__r.Baseline_Total_Spend__c * -1</formula>
    <label>% Total Spend Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>