force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/PercentCo_Funding_Capital_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>PercentCo_Funding_Capital_Spend_Variance__c</fullName>
    <formula>(  Baseline__r.Baseline_Co_Funding_Capital_Spend__c  -  Co_Funding_Capital_Spend__c  ) / Baseline__r.Baseline_Co_Funding_Capital_Spend__c * -1</formula>
    <label>% Co-Funding Capital Spend Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>