force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/PerForecast_Grant_Capital_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>PerForecast_Grant_Capital_Spend_Variance__c</fullName>
    <formula>(  Grant_A_A_Spend_Previous__c  -  Grant_Capital_Spend__c  ) / Grant_A_A_Spend_Previous__c * -1</formula>
    <label>% Forecast Grant Capital Spend Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>