force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Previous_Cost_To_Install_Measure__c.field-meta.xml
<CustomField>
    <fullName>Previous_Cost_To_Install_Measure__c</fullName>
    <label>Previous Cost To Install Measure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>