force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Previous_Measure_KPI_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Measure_KPI_Number__c</fullName>
    <description>KPI value prior to the change control request</description>
    <label>Measure KPI (Previous)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>