force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Property_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Measure_Type__c</fullName>
    <description>Populated from the change request form when a change involves a measure detail change. The value will mirror the type field on related baseline mirror object.</description>
    <label>Measure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Measure_Type</valueSetName>
    </valueSet>
</CustomField>