force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Property_Measure_Type_Previous__c.field-meta.xml
<CustomField>
    <fullName>Property_Measure_Type_Previous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store the related baseline measure detail&apos;s current value on creation of the line item. The value will be copied at the time of creation via the GMS form.</description>
    <label>Property Measure Type (Previous)</label>
    <referenceTo>PropertyMeasureType__c</referenceTo>
    <relationshipLabel>Change Control Request Line Items (Property Measure Type (Previous))</relationshipLabel>
    <relationshipName>Change_Control_Request_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>