force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Reason_for_GRL_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_GRL_Change__c</fullName>
    <label>Reason for GRL Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>