force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Start_Date_Original_Variance__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Original_Variance__c</fullName>
    <formula>Start_Date__c - Baseline__r.Baseline_Start_Date_Original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Original Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>