force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Start_Date_Previous__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Previous__c</fullName>
    <label>Start Date Previous</label>
    <type>Date</type>
</CustomField>