force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Starting_No_of_Non_Social_Homes__c.field-meta.xml
<CustomField>
    <fullName>Starting_No_of_Non_Social_Homes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Starting No. of Non-Social Homes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>