force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Starting_No_of_Social_Homes_EPC_C_A__c.field-meta.xml
<CustomField>
    <fullName>Starting_No_of_Social_Homes_EPC_C_A__c</fullName>
    <label>Starting No. of Social Homes EPC C-A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>