force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Supplier_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_End_Date__c</fullName>
    <label>Supplier End Date</label>
    <type>Date</type>
</CustomField>