force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <description>The name of the supplier that the Grant Recipient wants to inform the department of a change to</description>
    <inlineHelpText>The name of the supplier that the Grant Recipient wants to inform the department of a change to</inlineHelpText>
    <label>Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>