force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Total_Co_Funding_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_Funding_Contribution__c</fullName>
    <formula>Co_Funding_Capital_Spend__c +  Co_funding_A_A_spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Co-Funding Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>