force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Total_Co_Funding_Contribution_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Co_Funding_Contribution_Variance__c</fullName>
    <formula>Total_Co_Funding_Contribution__c -  Baseline__r.Baseline_Total_Co_Funding_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Co-Funding Contribution Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>