force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Total_Grant_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Spend__c</fullName>
    <formula>Grant_Capital_Spend__c +  Grant_A_A_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Grant Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>