force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Total_Grant_Spend_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Spend_Variance__c</fullName>
    <formula>Total_Grant_Spend__c -  Baseline__r.Baseline_Total_Grant_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Grant Spend Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>