force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Total_number_of_homes_to_be_upgraded__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_homes_to_be_upgraded__c</fullName>
    <label>No. of homes to be upgraded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>