force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Trustmark_Accredited__c.field-meta.xml
<CustomField>
    <fullName>Trustmark_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is the supplier Trustmark accredited</description>
    <inlineHelpText>is the supplier Trustmark accredited</inlineHelpText>
    <label>Trustmark Accredited</label>
    <type>Checkbox</type>
</CustomField>