force-app/main/default/objects/Change_Control_Request_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of record this change control request is for</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Award Baseline</fullName>
            </value>
            <value>
                <fullName>Sub Baseline</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
            <value>
                <fullName>Consortium Member Change</fullName>
            </value>
            <value>
                <fullName>Award Rename</fullName>
            </value>
            <value>
                <fullName>Grant Recipient Lead Change</fullName>
            </value>
            <value>
                <fullName>Measure Detail</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Project End Date</fullName>
            </value>
            <value>
                <fullName>Phase Change</fullName>
            </value>
            <value>
                <fullName>Income Verification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>