force-app/main/default/objects/Change_Control_Request_Line_Item__c/recordTypes/Local_Grant.recordType-meta.xml
<RecordType>
    <fullName>Local_Grant</fullName>
    <active>true</active>
    <label>Local Grant</label>
</RecordType>