force-app/main/default/objects/Change_Control_Request_Line_Item__c/recordTypes/SHF_Strategic_Partner.recordType-meta.xml
<RecordType>
    <fullName>SHF_Strategic_Partner</fullName>
    <active>true</active>
    <description>Change Control Request Line Item for Strategic partner awards</description>
    <label>SHF Strategic Partner</label>
</RecordType>